--- a/examples/index.html
+++ b/examples/index.html
@@ -6,7 +6,7 @@
   <body>
     <div class="main-container">
       <header>
-        <h1>Growity playground</h1>
+        <h1>Playground</h1>
       </header>
       <div class="content">
         <div class="content-view-console">
@@ -29,6 +29,6 @@
         <span>this is a test</span>
       </footer>
     </div>
-    <script type="text/javascript" src="build/loader.js"></script>
+    <script type="text/javascript" src="../build/loader.js"></script>
   </body>
 </html>
